--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 
 	<title>Flex Point Calculator</title>
 
-	<link rel="stylesheet" href="style.css">
+	<link href="https://fonts.googleapis.com/css?family=PT+Sans|PT+Serif:700" rel="stylesheet">
+	<link href="style.css" rel="stylesheet">
 </head>
 
 <body>
