Improves responsiveness, switches to rems

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<h1>Flex Point Calculator</h1>
 	</header>
 
-	<div id="body-container">
+	<div class="content-container">
 		<section id="instructions">
 			<h2>Start spending smarter.</h2>
 			<p>This is a tool to help  you keep track of how quickly you're spending your Flex Points. Follow these quick instructions to see your own personalized results, or <a href="#" id="demo-link">use sample demo data</a>.</p>
