Bug fixes: responsive typography

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
 	<footer role="contentinfo">
 		<p>Made with <code>&lt;3</code> by <a href="https://github.com/stephen-hannon" target="_blank">Stephen Hannon</a>.</p>
-		<p style="font-size: 0.7em;">This app is not affiliated with the University of Notre Dame or CBORD.</p>
+		<p style="font-size: .8em;">This app is not affiliated with the University of Notre Dame or CBORD.</p>
 	</footer>
 	
 	
