Adds OG/Twitter tags

--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,21 @@
 	<meta http-equiv="x-ua-compatible" content="ie=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<meta name="description" content="A Flex Point analyzer for Notre Dame students">
+	<title>Flexible &ndash; A Flex Point Analyzer</title>
+	<meta name="description" content="A free tool for Notre Dame students to analyze and track Flex Point usage">
+
+	<!-- Open Graph / Facebook -->
+	<meta property="og:type" content="website">
+	<meta property="og:url" content="https://stephen-hannon.github.io/flexible/">
+	<meta property="og:title" content="Flexible &ndash; A Flex Point Analyzer">
+	<meta property="og:description" content="A free tool for Notre Dame students to analyze and track Flex Point usage">
+	<meta property="og:image" content="./social-image.png">
+
+	<!-- Twitter -->
+	<meta property="twitter:card" content="summary_large_image">
+	<meta property="twitter:url" content="https://stephen-hannon.github.io/flexible/">
+	<meta property="twitter:title" content="Flexible &ndash; A Flex Point Analyzer">
+	<meta property="twitter:description" content="A free tool for Notre Dame students to analyze and track Flex Point usage">
 
 	<link rel="apple-touch-icon" sizes="180x180" href="./apple-touch-icon.png">
 	<link rel="icon" type="image/png" sizes="32x32" href="./favicon-32x32.png">
@@ -16,8 +30,6 @@
 	<meta name="application-name" content="Flexible">
 	<meta name="msapplication-TileColor" content="#27bc68">
 	<meta name="theme-color" content="#27BC68">
-
-	<title>Flexible &ndash; A Flex Point Analyzer</title>
 
 	<style>[v-cloak] { display: none !important; }</style>
 
