Explicit image urls

--- a/src/index.html
+++ b/src/index.html
@@ -13,13 +13,14 @@
 	<meta property="og:url" content="https://stephen-hannon.github.io/flexible/">
 	<meta property="og:title" content="Flexible &ndash; A Flex Point Analyzer">
 	<meta property="og:description" content="A free tool for Notre Dame students to analyze and track Flex Point usage">
-	<meta property="og:image" content="./social-image.png">
+	<meta property="og:image" content="https://stephen-hannon.github.io/flexible/social-image.png">
 
 	<!-- Twitter -->
 	<meta property="twitter:card" content="summary_large_image">
 	<meta property="twitter:url" content="https://stephen-hannon.github.io/flexible/">
 	<meta property="twitter:title" content="Flexible &ndash; A Flex Point Analyzer">
 	<meta property="twitter:description" content="A free tool for Notre Dame students to analyze and track Flex Point usage">
+	<meta property="og:image" content="https://stephen-hannon.github.io/flexible/social-image.png">
 
 	<link rel="apple-touch-icon" sizes="180x180" href="./apple-touch-icon.png">
 	<link rel="icon" type="image/png" sizes="32x32" href="./favicon-32x32.png">
