Adds eslint for Vue files

--- a/src/index.html
+++ b/src/index.html
@@ -148,8 +148,15 @@
 				<div class="tabs-content" role="tabpanel">
 					<ol class="fancylist">
 						<li>
-							{{ tabOption === 'mobile' ? 'Tap' : 'Click' }} the link to <strong>log in to
-							<a href="https://get.cbord.com/irish1card/full/login.php" target="_blank" title="Irish1Card GET (opens in a new tab)" rel="noreferrer">Irish1Card&nbsp;GET</a></strong>
+							{{ tabOption === 'mobile' ? 'Tap' : 'Click' }} the link to
+							<strong>log in to
+								<a
+									href="https://get.cbord.com/irish1card/full/login.php"
+									target="_blank"
+									title="Irish1Card GET (opens in a new tab)"
+									rel="noreferrer"
+								>Irish1Card&nbsp;GET</a>
+							</strong>
 							with your Notre Dame credentials.
 						</li>
 						<li>
