Switches to more intuitive sync syntax

--- a/src/index.html
+++ b/src/index.html
@@ -128,7 +128,7 @@
 				</app-card>
 			</div>
 
-			<app-collapsible header="In-depth instructions" v-model="collapseInstructions">
+			<app-collapsible header="In-depth instructions" :collapsed.sync="collapseInstructions">
 				<p>Follow these quick instructions to see your own full personalized results.</p>
 
 				<ul class="flatlist tabs" role="tablist">
