--- a/src/index.html
+++ b/src/index.html
@@ -10,17 +10,17 @@
 
 	<!-- Open Graph / Facebook -->
 	<meta property="og:type" content="website">
-	<meta property="og:url" content="https://stephen-hannon.github.io/flexible/">
+	<meta property="og:url" content="https://hannon.dev/flexible/">
 	<meta property="og:title" content="Flexible &ndash; A Flex Point Analyzer">
 	<meta property="og:description" content="A free tool for Notre Dame students to analyze and track Flex Point usage">
-	<meta property="og:image" content="https://stephen-hannon.github.io/flexible/social-image.png">
+	<meta property="og:image" content="https://hannon.dev/flexible/social-image.png">
 
 	<!-- Twitter -->
 	<meta property="twitter:card" content="summary_large_image">
-	<meta property="twitter:url" content="https://stephen-hannon.github.io/flexible/">
+	<meta property="twitter:url" content="https://hannon.dev/flexible/">
 	<meta property="twitter:title" content="Flexible &ndash; A Flex Point Analyzer">
 	<meta property="twitter:description" content="A free tool for Notre Dame students to analyze and track Flex Point usage">
-	<meta property="og:image" content="https://stephen-hannon.github.io/flexible/social-image.png">
+	<meta property="og:image" content="https://hannon.dev/flexible/social-image.png">
 
 	<link rel="apple-touch-icon" sizes="180x180" href="./apple-touch-icon.png">
 	<link rel="icon" type="image/png" sizes="32x32" href="./favicon-32x32.png">
@@ -62,7 +62,7 @@
 		</h1>
 
 		<ul class="flatlist header-links" role="navigation">
-			<li><a href="https://stephen-hannon.github.io" target="_blank" rel="noreferrer">
+			<li><a href="https://hannon.dev" target="_blank" rel="noreferrer">
 				<i class="fas fa-user"></i>
 				<span class="header-links-text"><span class="hide-below-s">By</span> Stephen Hannon</span>
 			</a></li>
